[gd_scene load_steps=3 format=2]

[ext_resource path="res://Models/MinorDetails/Tree.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tree_rand.gd" type="Script" id=2]

[node name="Trees" type="Spatial"]
script = ExtResource( 2 )

[node name="Tree" parent="." instance=ExtResource( 1 )]

[node name="Tree2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 1 )
visible = false

[node name="CollisionShape" parent="Tree2/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree2/Mesh/StaticBody" index="1"]
disabled = true

[node name="Tree3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -5 )
visible = false

[node name="CollisionShape" parent="Tree3/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree3/Mesh/StaticBody" index="1"]
disabled = true

[node name="Tree4" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -4 )
visible = false

[node name="CollisionShape" parent="Tree4/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree4/Mesh/StaticBody" index="1"]
disabled = true

[node name="Tree5" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 4 )
visible = false

[node name="CollisionShape" parent="Tree5/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree5/Mesh/StaticBody" index="1"]
disabled = true

[node name="Tree6" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 4 )
visible = false

[node name="CollisionShape" parent="Tree6/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree6/Mesh/StaticBody" index="1"]
disabled = true

[node name="Tree7" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -3 )
visible = false

[node name="CollisionShape" parent="Tree7/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree7/Mesh/StaticBody" index="1"]
disabled = true

[node name="Tree8" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )
visible = false

[node name="CollisionShape" parent="Tree8/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree8/Mesh/StaticBody" index="1"]
disabled = true

[node name="Tree9" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -4 )
visible = false

[node name="CollisionShape" parent="Tree9/Mesh/StaticBody" index="0"]
disabled = true

[node name="CollisionShape2" parent="Tree9/Mesh/StaticBody" index="1"]
disabled = true

[editable path="Tree2"]

[editable path="Tree3"]

[editable path="Tree4"]

[editable path="Tree5"]

[editable path="Tree6"]

[editable path="Tree7"]

[editable path="Tree8"]

[editable path="Tree9"]
